MyDevOrg/src/objects/Sprint_Backlog__c.object
<CustomObject>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_effort__c</fullName>
        <label>Planned effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Sprint Backlogs</relationshipLabel>
        <relationshipName>Sprint_Backlogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Synopsis__c</fullName>
        <label>Synopsis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_completed_hours__c</fullName>
        <label>Work completed (In hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_remaining_hours__c</fullName>
        <label>Work remaining (In hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sprint Backlog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPR{00000}</displayFormat>
        <label>Sprint ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprint Backlogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>